// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grouping contains link pointing to course url 1`] = `
<div>
  <div />
  <a
    href="example.com"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  >
    <span
      className=""
      style={
        Object {
          "backgroundColor": "#5678",
        }
      }
    />
    <span>
      Board Games
    </span>
  </a>
  <ol
    style={
      Object {
        "borderColor": "#5678",
      }
    }
  >
    <li>
      <PlannerItem
        badges={Array []}
        color="#5678"
        context={
          Object {
            "color": "#5678",
            "id": 256,
            "url": "example.com",
          }
        }
        courseName="Board Games"
        date={"2017-04-25T13:06:07.000Z"}
        id="5"
        theme={
          Object {
            "iconColor": "#5678",
          }
        }
        title="San Juan"
        toggleCompletion={[Function]}
        updateTodo={[Function]}
      />
    </li>
    <li>
      <PlannerItem
        badges={Array []}
        color="#5678"
        context={
          Object {
            "color": "#5678",
            "id": 256,
          }
        }
        courseName="Board Games"
        date={"2017-04-25T13:06:07.000Z"}
        id="6"
        theme={
          Object {
            "iconColor": "#5678",
          }
        }
        title="Roll for the Galaxy"
        toggleCompletion={[Function]}
        updateTodo={[Function]}
      />
    </li>
  </ol>
</div>
`;

exports[`renders a CompletedItemsFacade when completed items are present by default 1`] = `
<div>
  <div />
  <a
    href="example.com"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  >
    <span
      className=""
      style={
        Object {
          "backgroundColor": "#5678",
        }
      }
    />
    <span>
      Board Games
    </span>
  </a>
  <ol
    style={
      Object {
        "borderColor": "#5678",
      }
    }
  >
    <li>
      <PlannerItem
        badges={Array []}
        color="#5678"
        context={
          Object {
            "color": "#5678",
            "id": 256,
          }
        }
        courseName="Board Games"
        date={"2017-04-25T13:06:07.000Z"}
        id="6"
        theme={
          Object {
            "iconColor": "#5678",
          }
        }
        title="Roll for the Galaxy"
        toggleCompletion={[Function]}
        updateTodo={[Function]}
      />
    </li>
    <li>
      <CompletedItemsFacade
        badges={Array []}
        itemCount={1}
        onClick={[Function]}
      />
    </li>
  </ol>
</div>
`;

exports[`renders the base component with required props 1`] = `
<div>
  <div />
  <a
    href="example.com"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  >
    <span
      className=""
      style={
        Object {
          "backgroundColor": "#5678",
        }
      }
    />
    <span>
      Board Games
    </span>
  </a>
  <ol
    style={
      Object {
        "borderColor": "#5678",
      }
    }
  >
    <li>
      <PlannerItem
        badges={Array []}
        color="#5678"
        context={
          Object {
            "color": "#5678",
            "id": 256,
            "url": "example.com",
          }
        }
        courseName="Board Games"
        date={"2017-04-25T13:06:07.000Z"}
        id="5"
        theme={
          Object {
            "iconColor": "#5678",
          }
        }
        title="San Juan"
        toggleCompletion={[Function]}
        updateTodo={[Function]}
      />
    </li>
    <li>
      <PlannerItem
        badges={Array []}
        color="#5678"
        context={
          Object {
            "color": "#5678",
            "id": 256,
          }
        }
        courseName="Board Games"
        date={"2017-04-25T13:06:07.000Z"}
        id="6"
        theme={
          Object {
            "iconColor": "#5678",
          }
        }
        title="Roll for the Galaxy"
        toggleCompletion={[Function]}
        updateTodo={[Function]}
      />
    </li>
  </ol>
</div>
`;

exports[`renders to do items correctly 1`] = `
<div>
  <div />
  <a
    href="#"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  >
    <span
      className=""
      style={
        Object {
          "backgroundColor": null,
        }
      }
    />
    <span>
      To Do
    </span>
  </a>
  <ol
    style={
      Object {
        "borderColor": null,
      }
    }
  >
    <li>
      <PlannerItem
        badges={Array []}
        color={null}
        context={Object {}}
        courseName={null}
        date={"2017-06-16T11:06:07.000Z"}
        id="700"
        theme={
          Object {
            "iconColor": null,
          }
        }
        title="To Do 700"
        toggleCompletion={[Function]}
        updateTodo={[Function]}
      />
    </li>
  </ol>
</div>
`;
